# pybluehost

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: PRD.md
docs/architecture/: 01-layering.md  02-sap.md  03-statemachine.md  04-trace.md  05-sig-database.md  06-transport.md  07-hci.md  08-l2cap.md  09-ble-stack.md  10-classic-stack.md  11-gap.md  12-ble-profiles.md  13-stack-api.md  14-testing.md  README.md  intel-firmware-loading.md  realtek-firmware-loading.md  review-notes-2026-04-18.md
docs/superpowers/: STATUS.md
docs/superpowers/plans/: 2026-04-14-plan1-core-infrastructure.md  2026-04-25-cli-app-tools.md  2026-04-26-usb-hardware-diagnostics.md  2026-04-28-cli-demo-functional-closure.md  cli-app-tools.md  cli-demo-functional-closure.md  csr-usb-transport.md  plan1-core-infrastructure.md  plan10-stack-integration.md  plan11-test-infrastructure.md  plan2-transport-foundation.md  plan3-usb-transport.md  plan3a-usb-transport.md  plan3b-firmware.md  plan4-hci.md  plan4a-hci-codec.md  plan4b-hci-controller.md  plan5-l2cap.md  plan6-ble-stack.md  plan6a-att-gatt.md  plan6b-smp-security.md  plan7-classic-stack.md  plan8-gap.md  plan8a-ble-gap.md  plan8b-classic-gap.md  plan9-ble-profiles.md  plan9a-profile-framework.md  plan9b-builtin-profiles.md  pytest-transport-selection.md  usb-hardware-diagnostics.md
docs/superpowers/specs/: 2026-04-26-usb-hardware-diagnostics.md  cli-app-tools-design.md  csr-usb-transport-design.md  pytest-transport-selection-design.md  virtual-radio-design.md
pybluehost/: __init__.py  gap.py  logging_config.py  stack.py
pybluehost/ble/: __init__.py  att.py  gap.py  gatt.py  security.py  smp.py
pybluehost/classic/: __init__.py  gap.py  rfcomm.py  sdp.py  spp.py
pybluehost/cli/: __init__.py  _lifecycle.py  _logging.py  _loopback_peer.py  _target.py  _transport.py  _virtual_peer.py  diagnostics.py  fw.py
pybluehost/cli/app/: __init__.py  _ble_peripheral.py  ble_adv.py  ble_scan.py  classic_inquiry.py  gatt_browser.py  gatt_server.py  hr_monitor.py  sdp_browser.py  spp_echo.py
pybluehost/cli/tools/: __init__.py  decode.py  fw.py  rpa.py  usb.py
pybluehost/config/: __init__.py  log_config.yaml
pybluehost/core/: __init__.py  address.py  buffer.py  errors.py  gap_common.py  keys.py  sig_db.py  statemachine.py  trace.py  types.py  uuid.py
pybluehost/hci/: __init__.py  constants.py  controller.py  flow.py  packets.py  virtual.py
pybluehost/l2cap/: __init__.py  ble.py  channel.py  classic.py  constants.py  manager.py  sar.py  signaling.py
pybluehost/profiles/ble/: __init__.py  bas.py  base.py  bls.py  cscs.py  decorators.py  dis.py  gap_service.py  gatt_service.py  hids.py  hrs.py  rscs.py  yaml_loader.py
pybluehost/profiles/ble/services/: bas.yaml  bls.yaml  cscs.yaml  dis.yaml  gap.yaml  gatt.yaml  hids.yaml  hrs.yaml  rscs.yaml
pybluehost/tools/: gen_btsnoop_fixture.py
pybluehost/transport/: __init__.py  base.py  btsnoop.py  diagnostics.py  h4.py  hci_user_channel.py  loopback.py  tcp.py  uart.py  udp.py  usb.py
pybluehost/transport/firmware/: __init__.py  downloader.py
tests/: _fallback_tracker.py  _transport_select.py  conftest.py
tests/btsnoop/: test_replay.py
tests/data/: README.md  hci_reset.btsnoop
tests/e2e/: conftest.py
tests/fakes/: __init__.py  hci.py  l2cap.py  trace.py  transport.py
tests/hardware/: conftest.py  test_intel_hw.py  test_realtek_hw.py  test_usb_smoke.py
tests/hardware/firmware/: .gitignore
tests/integration/: conftest.py  test_hci_init.py  test_hci_l2cap.py  test_stack_fixture.py
tests/unit/: conftest.py  test_conftest_options.py  test_fakes.py  test_fallback_tracker.py  test_marker_enforcement.py  test_report_header.py  test_session_fixtures.py  test_stack.py  test_stack_factories.py  test_transport_select.py
tests/unit/ble/: test_att.py  test_gap.py  test_gatt.py  test_security.py  test_smp.py
tests/unit/classic/: test_gap.py  test_rfcomm.py  test_sdp.py  test_spp.py
tests/unit/cli/: conftest.py  test_app_ble_adv.py  test_app_ble_scan.py  test_app_classic_inquiry.py  test_app_gatt_browser.py  test_app_gatt_server.py  test_app_hr_monitor.py  test_app_sdp_browser.py  test_app_spp_echo.py  test_diagnostics.py  test_fw.py  test_lifecycle.py  test_logging.py  test_loopback_peer.py  test_main_entry.py  test_target.py  test_tools_decode.py  test_tools_init.py  test_tools_rpa.py  test_transport.py  test_transport_parse_bus_address.py  test_usb_cli.py  test_virtual_peer.py
tests/unit/cli/tools/: test_usb_diagnostics.py
tests/unit/core/: test_address.py  test_buffer.py  test_errors.py  test_gap_common.py  test_keys.py  test_sig_db.py  test_statemachine.py  test_trace.py  test_types.py  test_uuid.py
tests/unit/hci/: test_constants.py  test_controller.py  test_flow.py  test_packets.py  test_vendor.py  test_virtual.py  test_virtual_create.py
tests/unit/l2cap/: test_ble.py  test_classic.py  test_manager.py  test_sar.py  test_signaling.py
tests/unit/profiles/: test_base.py  test_builtin.py  test_clients.py  test_yaml_loader.py
tests/unit/transport/: test_base.py  test_btsnoop.py  test_diagnostics.py  test_firmware.py  test_h4.py  test_hci_user_channel.py  test_intel_fw.py  test_loopback.py  test_realtek_fw.py  test_tcp.py  test_uart.py  test_udp.py  test_usb.py  test_usb_list_devices.py
tests/unit/transport/firmware/: test_downloader.py
