[project]
name = "pybluehost"
version = "0.0.1"
description = "A professional Python Bluetooth Host stack for testing, simulation and protocol education."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "PyBlueHost Contributors"},
]
keywords = ["bluetooth", "ble", "hci", "host", "stack"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cryptography>=41.0",
    "libusb-package>=1.0.26.3",
    "pyserial-asyncio>=0.6",
    "pyusb>=1.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
pybluehost = "pybluehost.cli:main"

[project.urls]
Homepage = "https://github.com/gitdreambox/pybluehost"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: isolated unit tests (no real hardware, no network)",
    "integration: multi-layer tests using VirtualController + Loopback",
    "e2e: full-stack Loopback double-stack tests",
    "btsnoop: btsnoop file replay tests",
    "hardware: real USB Bluetooth adapter required (skipped in CI)",
    "slow: tests taking >5s",
]
addopts = "--strict-markers -q"

[tool.coverage.run]
source = ["pybluehost"]
omit = ["tests/*", "pybluehost/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
fail_under = 85

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
